@@ -1,3 +1,7 @@
+2003-06-05  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b11
+
+	* Try to detect where each program is located in backup_albums.php
+
 2003-06-04  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.5-cvs-b10
 
 	* Reworked user authentication in gallery_remote2.php to allow
